--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV=production
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://frolicking-cascaron-cb16a6.netlify.app
 DB_CONNECTION_STRING=mongodb+srv://giuseppi:supersecretpassword@cluster0.coactoz.mongodb.net/kanbas?retryWrites=true&w=majority
